# civipy

./: .gitignore  CHANGES.md  README.md  pyproject.toml  release.py  setup.py
.github/workflows/: publish.yml
civipy/: __init__.py  activity.py  address.py  base.py  config.py  contact.py  contribution.py  country.py  custom_field.py  event.py  exceptions.py  financial.py  grant.py  mailing.py  membership.py  note.py  option_group.py  order.py  user.py
civipy/base/: base.py  config.py  utils.py
civipy/interface/: __init__.py  base.py  v3.py  v4.py
tests/: conftest.py  test_base.py  test_contact.py  test_contribution.py  utils.py
tests/responses/: Contact_v3_create.json  Contact_v3_get.json  Contribution_v3_get.json
